WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291593
REGRESSION (
293308@main
): China Construction Bank iOS app crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=291593
Summary
REGRESSION (293308@main): China Construction Bank iOS app crashes on launch
Wenson Hsieh
Reported
2025-04-15 14:25:22 PDT
rdar://149183443
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-04-15 14:28:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44117
EWS
Comment 2
2025-04-15 16:13:17 PDT
Committed
293738@main
(b0dbeef00829): <
https://commits.webkit.org/293738@main
> Reviewed commits have been landed. Closing PR #44117 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug