REGRESSION (293308@main): China Construction Bank iOS app crashes on launch https://bugs.webkit.org/show_bug.cgi?id=291593 rdar://149183443

Reviewed by Abrar Rahman Protyasha.

Reintroduce this SPI method implementation to work around the binary incompatibility, but guard it
behind both a linked-on check and a app bundle ID check to ensure that there are no new usages of it
moving forward.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::IOSApplication::isChinaConstructionBank):
(WTF::IOSApplication::isKanbawzaBank):
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(browsingContextControllerMethodStub):
(addBrowsingContextControllerMethodStubIfNeeded):
(-[WKWebView _initializeWithConfiguration:]):

Canonical link: https://commits.webkit.org/293738@main